# bunshin-desktop

./: .gitignore  .prettierrc  Makefile  README.md  api.yaml  components.json  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: publish.yml
docs/: providers.html
scripts/: fetch-claude.mjs  sync-models.sh
src/: App.tsx  router.tsx
src-tauri/: .env  Cargo.toml  build.rs  entitlements.plist  tauri.conf.json
src-tauri/.tauri/: deep-link.json
src-tauri/capabilities/: default.json  settings.json
src-tauri/config/models/: google.json  openai.json  perplexity.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  version.rs  window_setup.rs
src-tauri/src/avatar_proxy/: mod.rs
src-tauri/src/claude_agent/: commands.rs  manager.rs  mod.rs  process.rs  protocol.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/config/: constants.rs
src-tauri/src/database/: connection.rs  mod.rs
src-tauri/src/database/commands/: agent_commands.rs  agents.rs  group_commands.rs  message_commands.rs  messages.rs  mod.rs  model_commands.rs  providers.rs  session_commands.rs  sessions.rs
src-tauri/src/database/models/: agent.rs  group.rs  message.rs  mod.rs  model.rs  provider.rs  query.rs  response.rs  session.rs
src-tauri/src/database/repositories/: agent_repository.rs  agents.rs  group_repository.rs  message_repository.rs  messages.rs  mod.rs  model_repository.rs  providers.rs  session_repository.rs  sessions.rs
src-tauri/src/file_storage/: mod.rs
src-tauri/src/mcp/: commands.rs  mod.rs
src-tauri/src/media/: mod.rs
src-tauri/src/mime_types/: mod.rs
src-tauri/src/secure_storage/: mod.rs
src-tauri/src/settings/: mod.rs
src/components/: ErrorBoundary.tsx
src/components/common/: index.ts
src/components/common/Avatar/: AgentAvatar.tsx  Avatar.tsx  AvatarSection.tsx
src/components/common/Buttons/: DeleteButton.tsx  IconButton.tsx  PinButton.tsx
src/components/common/Config/: CustomConfigForm.tsx
src/components/common/Icons/: ProviderIcon.tsx
src/components/common/Images/: CachedImage.tsx  ProxiedImage.tsx
src/components/common/Layout/: DetailLayout.tsx  EditableName.tsx  NotFoundView.tsx  SidebarContainer.tsx  useAppNavigation.ts
src/components/common/Media/: CachedAudio.tsx  CachedVideo.tsx  index.ts
src/components/features/Agents/: AgentOverview.tsx
src/components/features/Chat/: ChatView.tsx  ChatWindow.tsx  SessionProvider.tsx  index.ts
src/components/features/Contacts/: AgentConfigSection.tsx  AgentCreationModal.tsx  AgentDetail.tsx  AgentEditor.tsx  ContactDetail.tsx  ContactItem.tsx  ContactList.tsx  ContactsList.tsx  ContactsView.tsx  FieldRow.tsx  index.ts
src/components/features/Groups/: GroupCreation.tsx  GroupCreationModal.tsx  GroupDetail.tsx  GroupInfoSection.tsx  GroupItem.tsx  GroupProfileSection.tsx  index.ts
src/components/features/Sessions/: AgentsList.tsx  Composer.tsx  Markdown.tsx  MessageRenderer.tsx  PermissionRequestCard.tsx  SessionView.tsx  SessionsList.tsx  SessionsView.tsx  StartSessionModal.tsx
src/components/features/Settings/: SettingsWindow.ts  SettingsWindowPage.tsx
src/components/layout/: MainLayout.tsx  Sidebar.tsx
src/components/ui/: index.ts
src/contexts/: AuthProvider.tsx  ThemeProvider.tsx
src/hooks/: useAuth.ts
src/hooks/agents/: index.ts
src/hooks/models/: useModels.ts
src/hooks/providers/: index.ts
src/hooks/sessions/: index.ts  mutations.ts  query.ts  useSessionActions.ts
src/hooks/settings/: mutations.ts  query.ts
src/hooks/status/: types.ts
src/lib/i18n/: index.ts
src/lib/types/: index.ts
src/lib/ui/: utils.ts
src/stores/: status-selectors.ts  status-store.ts
src/styles/: global.css
src/types/: api.d.ts
(+232 files in other folders)
