[package]
name = "Bunshin"
version = "0.5.1"
description = "Bunshin App"
authors = ["you"]
edition = "2021"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-http = "2"
tauri-plugin-process = "2"
tauri-plugin-decorum = "1.1.1"
tauri-plugin-log = "2"
tauri-plugin-cache = "0.1.5"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
reqwest = { version = "0.11", features = ["json", "stream"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }

tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
dashmap = "5.5"
log = "0.4"

# Age-encrypted secure storage for provider API keys
age = "0.10"
dirs = "5.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
